--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "img-meta",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "CLI for getting image meta.",
+  "bin": "dist/src/index.js",
   "scripts": {
     "build": "tsc",
     "lint": "eslint .",
@@ -12,18 +12,21 @@
   "author": "Dan Levett",
   "license": "ISC",
   "type": "module",
-  "devDependencies": {
-    "@dlevs/eslint-config": "^1.0.13",
-    "@types/exif-reader": "^1.0.0",
-    "@types/lodash": "^4.14.195",
-    "@types/node": "^20.2.5",
+  "dependencies": {
     "commander": "^10.0.1",
-    "eslint": "^8.42.0",
     "exif-reader": "^1.2.0",
     "globby": "^13.1.4",
     "lodash": "^4.17.21",
     "p-limit": "^4.0.0",
-    "sharp": "^0.32.1",
+    "sharp": "^0.32.1"
+  },
+  "devDependencies": {
+    "@dlevs/eslint-config": "^1.0.14",
+    "@types/exif-reader": "^1.0.0",
+    "@types/lodash": "^4.14.195",
+    "@types/node": "^20.2.5",
+    "eslint": "^8.42.0",
+    "typescript": "^5.1.3",
     "vitest": "^0.32.0"
   }
 }
